fix modmenu info

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@ fabric_version=0.69.1+1.19.3
 mod_version = 0.1.0
 maven_group = fengliu.cloudmusic
 archives_base_name = fengliu-cloudmusic-mod
+
+mod_menu_version = 5.0.1
