--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ group = project.maven_group
 
 repositories {
 	maven { url 'https://maven.wispforest.io' }
+	maven { url 'https://maven.terraformersmc.com/releases/' }
 }
 
 dependencies {
@@ -22,6 +23,8 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	modCompileOnly "com.terraformersmc:modmenu:${project.mod_menu_version}"
 
 	// 以支持 mp3 播放
 
