Optimization config ues malilib and playlist add/del command, add config gui

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ group = project.maven_group
 
 repositories {
 	maven { url 'https://maven.wispforest.io' }
+	maven { url 'https://masa.dy.fi/maven' }
 	maven { url 'https://maven.terraformersmc.com/releases/' }
 }
 
@@ -23,6 +24,10 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	modImplementation "fi.dy.masa.malilib:malilib-fabric-${project.minecraft_version}:${project.malilib_version}"
+
+	modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
 
 	// 以支持 mp3 播放
 
