--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,8 @@ fabric_version=0.69.1+1.19.3
 mod_version = 0.3.2
 maven_group = fengliu.cloudmusic
 archives_base_name = fengliu-cloudmusic-mod
+
+# Required malilib version
+malilib_version = 0.14.0
+
+modmenu_version=5.0.2
