--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,12 @@ dependencies {
 	implementation group: 'com.googlecode.soundlibs', name: 'tritonus-share', version: '0.3.7.4'
 	include group: 'com.googlecode.soundlibs', name: 'tritonus-share', version: '0.3.7.4'
 
+	// 以支持 flac 播放
+
+	// https://mvnrepository.com/artifact/org.jflac/jflac-codec
+	implementation group: 'org.jflac', name: 'jflac-codec', version: '1.5.2'
+	include group: 'org.jflac', name: 'jflac-codec', version: '1.5.2'
+
 	// 二维码
 
 	// https://mvnrepository.com/artifact/com.google.zxing/core
