--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,19 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.3
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.3
 loader_version=0.14.11
 
 #Fabric api
-fabric_version=0.69.1+1.19.3
+fabric_version=0.73.0+1.19.2
 
 # Mod Properties
-mod_version = 0.4.2
-maven_group = fengliu.cloudmusic
-archives_base_name = fengliu-cloudmusic-mod
+mod_version=0.4.2
+maven_group=fengliu.cloudmusic
+archives_base_name=fengliu-cloudmusic-mod
 
 # Required malilib version
-malilib_version = 0.14.0
+malilib_version =0.13.0
 
 modmenu_version=5.0.2
