--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.4
-loader_version=0.14.11
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.65
+loader_version=0.14.13
 
 #Fabric api
-fabric_version=0.67.0+1.18.2
+fabric_version=0.46.1+1.17
 
 # Mod Properties
 mod_version=0.4.2
@@ -16,6 +16,6 @@ maven_group=fengliu.cloudmusic
 archives_base_name=fengliu-cloudmusic-mod
 
 # Required malilib version
-malilib_version=0.12.0
+malilib_version=0.10.0-dev.23
 
 modmenu_version=5.0.2
