--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.65
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.10
 loader_version=0.14.13
 
 #Fabric api
-fabric_version=0.46.1+1.17
+fabric_version=0.42.0+1.16
 
 # Mod Properties
 mod_version=0.4.2
@@ -16,6 +16,6 @@ maven_group=fengliu.cloudmusic
 archives_base_name=fengliu-cloudmusic-mod
 
 # Required malilib version
-malilib_version=0.10.0-dev.23
+malilib_version=0.10.0-dev.21+arne.8
 
 modmenu_version=5.0.2
