--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,9 @@ fabric_version=0.73.0+1.19.2
 # Mod Properties
 mod_version=0.4.2
 maven_group=fengliu.cloudmusic
-archives_base_name=fengliu-cloudmusic-mod
+archives_base_name=cloudmusic-mod
+
+minecraft_version_out=1.19.2~1.19.3
 
 # Required malilib version
 malilib_version =0.13.0
