update 1.19.4 v0.4.3, add random play, optimization config and code

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,21 +3,21 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.3
-loader_version=0.14.11
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.1
+loader_version=0.14.18
 
 #Fabric api
-fabric_version=0.69.1+1.19.3
+fabric_version=0.76.0+1.19.4
 
 # Mod Properties
-mod_version = 0.5.0
+mod_version = 0.4.3
 maven_group = fengliu.cloudmusic
 archives_base_name = cloudmusic-mod
 
-minecraft_version_out=1.19.3
+minecraft_version_out=1.19.4
 
 # Required malilib version
-malilib_version = 0.14.0
+malilib_version=0.15.2
 
-modmenu_version=5.0.2
+modmenu_version=6.1.0-rc.4
