Fix #9 open ConfigGui err, Fix lang.json

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@ minecraft_version_out=1.19.4
 # Required malilib version
 malilib_version=0.15.4
 
-modmenu_version=6.1.0-rc.4
+modmenu_version=6.2.2
