--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ mod_version = 0.4.5
 maven_group = fengliu.cloudmusic
 archives_base_name = cloudmusic-mod
 
-minecraft_version_out=1.20.1
+minecraft_version_out=1.20.x
 
 # Required malilib version
 malilib_version = 0.16.0
