--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.9
-loader_version=0.14.21
+minecraft_version=1.20.2
+yarn_mappings=1.20.2+build.4
+loader_version=0.14.23
 
 #Fabric api
-fabric_version=0.85.0+1.20.1
+fabric_version=0.90.0+1.20.2
 
 # Mod Properties
 mod_version = 0.4.5
@@ -18,6 +18,11 @@ archives_base_name = cloudmusic-mod
 minecraft_version_out=1.20.x
 
 # Required malilib version
-malilib_version = 0.16.0
+malilib_version = 0.17.0
 
 modmenu_version = 7.0.1
+
+systemProp.http.proxyHost = 127.0.0.1
+systemProp.http.proxyPort = 7890
+systemProp.https.proxyHost = 127.0.0.1
+systemProp.https.proxyPort = 7890
