--- a/gradle.properties
+++ b/gradle.properties
@@ -11,11 +11,11 @@ loader_version=0.15.0
 fabric_version=0.95.1+1.20.4
 
 # Mod Properties
-mod_version = 0.4.6
+mod_version = 0.4.7
 maven_group = fengliu.cloudmusic
 archives_base_name = cloudmusic-mod
 
-minecraft_version_out=1.20.x
+minecraft_version_out=1.20.4
 
 # Required malilib version
 malilib_version = 0.18.0
