fix useless expression and update fabric to 1.20.6

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
-
-# Fabric Properties
 minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.0
-
-#Fabric api
-fabric_version=0.95.1+1.20.4
-
-# Mod Properties
-mod_version = 0.4.7
-maven_group = fengliu.cloudmusic
-archives_base_name = cloudmusic-mod
-
-minecraft_version_out=1.20.4
-
-# Required malilib version
-malilib_version = 0.18.0
-
-modmenu_version = 9.0.0
+yarn_mappings=1.20.6+build.3
+loader_version=0.15.11
+fabric_version=0.100.2+1.20.6
+mod_version=0.4.7
+maven_group=fengliu.cloudmusic
+archives_base_name=cloudmusic-mod
+minecraft_version_out=1.20.6
+malilib_version=1.20.6-0.19.0
+modmenu_version=9.0.0
