--- a/build.gradle
+++ b/build.gradle
@@ -1,94 +1,60 @@
 plugins {
-	id 'fabric-loom' version '1.6-SNAPSHOT'
-	id 'maven-publish'
+    id 'fabric-loom' version '1.7-SNAPSHOT'
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
+base {
+    archivesName = project.archives_base_name + '-' + project.minecraft_version_out
+}
 
-archivesBaseName = project.archives_base_name + '-' + project.minecraft_version_out
 version = project.mod_version
 group = project.maven_group
 
 repositories {
-	maven { url 'https://maven.wispforest.io' }
-	maven { url 'https://masa.dy.fi/maven' }
-	maven { url 'https://maven.terraformersmc.com/releases/' }
+    maven { url 'https://maven.wispforest.io' }
+    maven { url 'https://jitpack.io' }
+    maven { url 'https://maven.terraformersmc.com/releases/' }
 }
 
 dependencies {
-	// To change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modImplementation "com.github.sakura-ryoko:malilib:${project.malilib_version}"
+    modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	modImplementation "fi.dy.masa.malilib:malilib-fabric-${project.minecraft_version}:${project.malilib_version}"
-
-	modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
-
-	// 以支持 mp3 播放
-
-	// https://mvnrepository.com/artifact/javazoom/jlayer
-	implementation group: 'javazoom', name: 'jlayer', version: '1.0.1'
-	include group: 'javazoom', name: 'jlayer', version: '1.0.1'
-
-	// https://mvnrepository.com/artifact/com.googlecode.soundlibs/mp3spi
-	implementation group: 'com.googlecode.soundlibs', name: 'mp3spi', version: '1.9.5.4'
-	include group: 'com.googlecode.soundlibs', name: 'mp3spi', version: '1.9.5.4'
-
-	// https://mvnrepository.com/artifact/com.googlecode.soundlibs/tritonus-share
-	implementation group: 'com.googlecode.soundlibs', name: 'tritonus-share', version: '0.3.7.4'
-	include group: 'com.googlecode.soundlibs', name: 'tritonus-share', version: '0.3.7.4'
-
-	// 以支持 flac 播放
-
-	// https://mvnrepository.com/artifact/org.jflac/jflac-codec
-	implementation group: 'org.jflac', name: 'jflac-codec', version: '1.5.2'
-	include group: 'org.jflac', name: 'jflac-codec', version: '1.5.2'
-
-	// 二维码
-
-	// https://mvnrepository.com/artifact/com.google.zxing/core
-	implementation group: 'com.google.zxing', name: 'core', version: '3.5.1'
-	include group: 'com.google.zxing', name: 'core', version: '3.5.1'
-
+    // 以支持 mp3 播放
+    implementation("javazoom:jlayer:1.0.1")
+    // MP3SPI，用于解码mp3文件
+    implementation("com.googlecode.soundlibs:mp3spi:1.9.5.4")
+    // Tritonus Share，提供音频处理服务
+    implementation("com.googlecode.soundlibs:tritonus-share:0.3.7.4")
+    // JFlac Codec，用于解码flac文件
+    implementation("org.jflac:jflac-codec:1.5.2")
+    // ZXing Core，用于二维码处理
+    implementation("com.google.zxing:core:3.5.1")
+    include("javazoom:jlayer:1.0.1")
+    include("com.googlecode.soundlibs:mp3spi:1.9.5.4")
+    include("com.googlecode.soundlibs:tritonus-share:0.3.7.4")
+    include("org.jflac:jflac-codec:1.5.2")
+    include("com.google.zxing:core:3.5.1")
 }
 
 processResources {
-	inputs.property "version", project.version
+    inputs.property "version", project.version
 
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
-	}
+    filesMatching("fabric.mod.json") {
+        expand "version": project.version
+    }
 }
 
 tasks.withType(JavaCompile).configureEach {
-	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-	it.options.release = 17
+    it.options.release = 21
+    it.options.encoding = "UTF-8"
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 jar {
-	from("LICENSE") {
-		rename { "${it}_${project.archivesBaseName}"}
-	}
-}
-
-// configure the maven publication
-publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			from components.java
-		}
-	}
-
-	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
-	}
+    from("LICENSE")
 }
