--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,12 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
-minecraft_version=1.20.4
-yarn_mappings=1.20.6+build.3
+minecraft_version=1.21
+yarn_mappings=1.21+build.2
 loader_version=0.15.11
-fabric_version=0.100.2+1.20.6
+fabric_version=0.100.3+1.21
 mod_version=0.4.7
 maven_group=fengliu.cloudmusic
 archives_base_name=cloudmusic-mod
-minecraft_version_out=1.20.6
-malilib_version=1.20.6-0.19.0
-modmenu_version=9.0.0
+malilib_version=1.21-sakura.3
+modmenu_version=11.0.1
