--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
-minecraft_version=1.21
-yarn_mappings=1.21+build.2
-loader_version=0.15.11
-fabric_version=0.100.3+1.21
+minecraft_version=1.21.3
+yarn_mappings=1.21.3+build.2
+loader_version=0.16.9
+fabric_version=0.110.0+1.21.3
 mod_version=0.4.8
 maven_group=fengliu.cloudmusic
 archives_base_name=cloudmusic-mod
-malilib_version=1.21-sakura.3
+malilib_version=1.21.3-0.22.2
 modmenu_version=11.0.1
