add malilib depends

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,9 @@ processResources {
     inputs.property "version", project.version
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version
+        expand "version": project.version,
+                "minecraft_version": minecraft_version,
+                "malilib_version": malilib_version.split("-").last()
     }
 }
 
