--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
-minecraft_version=1.21.3
-yarn_mappings=1.21.3+build.2
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.4
 loader_version=0.16.9
-fabric_version=0.110.0+1.21.3
+fabric_version=0.114.0+1.21.4
 mod_version=0.4.8
 maven_group=fengliu.cloudmusic
 archives_base_name=cloudmusic-mod
-malilib_version=1.21.3-0.22.2
-modmenu_version=11.0.1
+malilib_version=1.21.4-0.23.1
+modmenu_version=13.0.0-beta.1
